🪟 🐛 Fix job history page stretching when long error message is present (#6625)

--- a/airbyte-webapp/src/packages/cloud/views/layout/CloudMainView/CloudMainView.module.scss
+++ b/airbyte-webapp/src/packages/cloud/views/layout/CloudMainView/CloudMainView.module.scss
@@ -18,6 +18,9 @@ $sidebar-workspace-font-weight: 400;
     display: flex;
     flex-direction: column;
 
+    // prevents this div from overflowing when its children grow too large, as this overrides the default min-width:auto behavior of flexbox
+    min-width: 0;
+
     .dataBlock {
       overflow-y: auto;
       flex-grow: 1;
